ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: ingress
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  ports:
  - port: 80
    name: web
    targetPort: "web"
    protocol: "TCP"
  - port: 443
    name: websecure
    targetPort: "websecure"
    protocol: "TCP"
